# python-fractals

./: README.md  pyproject.toml
app/: create_animation.py  julia.py  koch.py  mandelbrot.py  mandelbrot_animated.py  sierpinsky.py
