[tool.poetry]
name = "python-fractals"
version = "0.1.0"
description = ""
authors = ["Patrick Kalkman <patrick@simpletechture.nl>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.0"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
moviepy = "^1.0.3"
setuptools = "^67.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
